// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddFolder component disables submit button when input is blank 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="folder-name"
    >
      Enter a name for a new folder:
    </label>
    <input
      id="folder-name"
      name="folder-name"
      onChange={[Function]}
      required={true}
      type="text"
    />
    <button
      disabled={true}
      type="submit"
    >
      Create Folder
    </button>
  </form>
</Fragment>
`;

exports[`AddFolder component enables submit button when valid folder name is entered 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="folder-name"
    >
      Enter a name for a new folder:
    </label>
    <input
      id="folder-name"
      name="folder-name"
      onChange={[Function]}
      required={true}
      type="text"
    />
    <ValidationError />
    <button
      disabled={false}
      type="submit"
    >
      Create Folder
    </button>
  </form>
</Fragment>
`;

exports[`AddFolder component renders an error message when the input contains no characters 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="folder-name"
    >
      Enter a name for a new folder:
    </label>
    <input
      id="folder-name"
      name="folder-name"
      onChange={[Function]}
      required={true}
      type="text"
    />
    <ValidationError
      message="Name is required and must contain at least one character."
    />
    <button
      disabled={true}
      type="submit"
    >
      Create Folder
    </button>
  </form>
</Fragment>
`;

exports[`AddFolder component renders the UI as expected 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="folder-name"
    >
      Enter a name for a new folder:
    </label>
    <input
      id="folder-name"
      name="folder-name"
      onChange={[Function]}
      required={true}
      type="text"
    />
    <button
      disabled={true}
      type="submit"
    >
      Create Folder
    </button>
  </form>
</Fragment>
`;
